--- a/MentalWellness/app/src/main/res/values/styles.xml
+++ b/MentalWellness/app/src/main/res/values/styles.xml
@@ -41,4 +41,9 @@
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
     </style>
+    
+    <style name="BottomNavigationStyle">
+        <item name="android:background">@android:color/white</item>
+        <item name="android:elevation">16dp</item>
+    </style>
 </resources> 
