--- a/MentalWellness/app/src/main/res/drawable/level_badge_background.xml
+++ b/MentalWellness/app/src/main/res/drawable/level_badge_background.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#FFFFFF" />
-    <corners android:radius="25dp" />
-    <stroke android:width="1dp" android:color="#FF5722" />
+    <solid android:color="@color/medium_peach" />
+    <corners android:radius="20dp" />
 </shape> 
